--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "postinstall": "patch-package || true"
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.13",
@@ -40,6 +40,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-ble-advertiser": "^0.0.17",
     "react-native-ble-plx": "^3.5.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
@@ -57,5 +58,6 @@
     "patch-package": "^8.0.0",
     "typescript": "~5.8.3"
   },
+  "license": "MIT",
   "private": true
 }
