--- a/client/app.json
+++ b/client/app.json
@@ -27,7 +27,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": null
+      "favicon": "./assets/images/icon.png"
     },
     "plugins": [
       "expo-router"
