--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@clerk/clerk-expo": "^2.14.13",
     "@clerk/shared": "^3.16.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
