--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,13 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.7",
+    "@reduxjs/toolkit": "^2.8.2",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.20",
+    "expo-application": "^6.1.5",
+    "expo-auth-session": "^6.2.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
@@ -27,6 +32,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-secure-store": "^14.2.3",
@@ -36,6 +42,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.0.0",
+    "lottie-react-native": "^7.3.2",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
@@ -43,12 +50,19 @@
     "react-native": "0.79.5",
     "react-native-ble-advertiser": "^0.0.17",
     "react-native-ble-plx": "^3.5.0",
+    "react-native-bluetooth-peripheral": "^0.1.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
