--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,10 @@
     "@clerk/clerk-expo": "^2.14.13",
     "@clerk/shared": "^3.16.0",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.7",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
@@ -42,7 +42,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.0.0",
-    "lottie-react-native": "^7.3.2",
+    "lottie-react-native": "7.2.2",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
