--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "babel-plugin-module-resolver": "^5.0.2"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "expo": "^53.0.20"
   }
 }
